src/grid/snapshots/equilibrium__grid__shape__tests__W pentomino.snap
---
source: src/grid/shape.rs
expression: outline
---
[
    Qr {
        x: 0,
        y: 0,
    },
    Qr {
        x: 1,
        y: 0,
    },
    Qr {
        x: 1,
        y: -1,
    },
    Qr {
        x: 2,
        y: -1,
    },
    Qr {
        x: 2,
        y: 1,
    },
    Qr {
        x: 1,
        y: 1,
    },
    Qr {
        x: 1,
        y: 2,
    },
    Qr {
        x: -1,
        y: 2,
    },
    Qr {
        x: -1,
        y: 1,
    },
    Qr {
        x: 0,
        y: 1,
    },
]
